Add HandleValidSubmit and JwtToken Integration

--- a/PasswordManagerBlazor/Client/wwwroot/index.html
+++ b/PasswordManagerBlazor/Client/wwwroot/index.html
@@ -34,3 +34,13 @@
 </body>
 
 </html>
+<script>
+    window.localStorageFunctions = {
+        setItem: function (key, value) {
+            localStorage.setItem(key, value);
+        },
+        getItem: function (key) {
+            return localStorage.getItem(key);
+        }
+    };
+</script>
